unpackaged/main/default/objects/Partner_Change__c/Partner_Change__c.object-meta.xml
<CustomObject>
    <description>Object used to track partner changes regarding the partner account or on equity things</description>
    <label>Partner Change</label>
    <nameField>
        <displayFormat>Partner Change - {0000}</displayFormat>
        <label>Partner Change</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Changes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>