unpackaged/main/default/objects/Partner_Change__c/fields/Books_Offered__c.field-meta.xml
<CustomField>
    <fullName>Books_Offered__c</fullName>
    <label>Books Offered</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Books</valueSetName>
    </valueSet>
</CustomField>