unpackaged/main/default/objects/Partner_Change__c/fields/Costs__c.field-meta.xml
<CustomField>
    <fullName>Costs__c</fullName>
    <label>Costs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Costs</valueSetName>
    </valueSet>
</CustomField>