unpackaged/main/default/objects/Partner_Change__c/fields/Equity_language__c.field-meta.xml
<CustomField>
    <fullName>Equity_language__c</fullName>
    <label>Equity language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Equity_Language</valueSetName>
    </valueSet>
</CustomField>