unpackaged/main/default/objects/Partner_Change__c/fields/Equity_relevant_long__c.field-meta.xml
<CustomField>
    <fullName>Equity_relevant_long__c</fullName>
    <label>Equity relevant long</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>