unpackaged/main/default/objects/Partner_Change__c/fields/Instructional_Level_Higher_Ed__c.field-meta.xml
<CustomField>
    <fullName>Instructional_Level_Higher_Ed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Instructional Level Higher Ed</label>
    <type>Checkbox</type>
</CustomField>