unpackaged/main/default/objects/Partner_Change__c/fields/Instructional_Level_K12__c.field-meta.xml
<CustomField>
    <fullName>Instructional_Level_K12__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Instructional Level K12</label>
    <type>Checkbox</type>
</CustomField>