unpackaged/main/default/objects/Partner_Change__c/fields/Long_Description__c.field-meta.xml
<CustomField>
    <fullName>Long_Description__c</fullName>
    <label>Long Description - 1115 characters max</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>