unpackaged/main/default/objects/Partner_Change__c/fields/Main_Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Main_Partner_Type__c</fullName>
    <label>Main Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Partner_Type</valueSetName>
    </valueSet>
</CustomField>