unpackaged/main/default/objects/Partner_Change__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner</label>
    <referenceTo>Partner__c</referenceTo>
    <relationshipLabel>Partner Changes</relationshipLabel>
    <relationshipName>Partner_Changes</relationshipName>
    <type>Lookup</type>
</CustomField>